--- a/my-clash.example.yaml
+++ b/my-clash.example.yaml
@@ -102,6 +102,7 @@ sniffer:
   skip-domain:
     - "rule-set:private_domain,cn_domain"
     - "dlg.io.mi.com"
+    - "+.q3boy.com"
     - "+.push.apple.com"
     - "+.apple.com"
     - "+.wechat.com"
@@ -157,6 +158,7 @@ dns:
     - "+.ntp1.aliyun.com"
     - "+.ntp.ntsc.ac.cn"
     - "+.cn.ntp.org.cn"
+    - "+.q3boy.com"
   default-nameserver:
     - "223.5.5.5"
     - "119.29.29.29"
