--- a/my-clash.example.yaml
+++ b/my-clash.example.yaml
@@ -221,18 +221,23 @@ dns:
 
 # 出站策略
 # 注意锚点必须放在引用的上方，可以集中把锚点全部放yaml的顶部。
-pr: &pr {type: select, proxies: [🚀 默认代理, 🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇸 美国, 🇺🇳 其它, 🌐 全部节点, 直连]}
-prsg: &prsg {type: select, proxies: [🇸🇬 新加坡, 🚀 默认代理, 🇭🇰 香港, 🇹🇼 台湾, 🇯🇵 日本, 🇺🇸 美国, 🇺🇳 其它, 🌐 全部节点, 直连]}
-prjp: &prjp {type: select, proxies: [🇯🇵 日本, 🚀 默认代理, 🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇺🇸 美国, 🇺🇳 其它, 🌐 全部节点, 直连]}
-prdirect: &prdirect {type: select, proxies: [直连, 🚀 默认代理, 🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇸 美国, 🇺🇳 其它, 🌐 全部节点]}
-prads: &prads {type: select, proxies: [REJECT, 直连, 🚀 默认代理, 🌐 全部节点]}
+anchors:
+  pr: &pr {type: select, proxies: [🚀 默认代理, 🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇸 美国, 🇺🇳 其它, 🌐 全部节点, 直连]}
+  prsg: &prsg {type: select, proxies: [🇸🇬 新加坡, 🚀 默认代理, 🇭🇰 香港, 🇹🇼 台湾, 🇯🇵 日本, 🇺🇸 美国, 🇺🇳 其它, 🌐 全部节点, 直连]}
+  prjp: &prjp {type: select, proxies: [🇯🇵 日本, 🚀 默认代理, 🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇺🇸 美国, 🇺🇳 其它, 🌐 全部节点, 直连]}
+  prdirect: &prdirect {type: select, proxies: [直连, 🚀 默认代理, 🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇸 美国, 🇺🇳 其它, 🌐 全部节点]}
+  prads: &prads {type: select, proxies: [REJECT, 直连, 🚀 默认代理, 🌐 全部节点]}
 
-filterhk: &filterhk {include-all: true, filter: "(?i)香港"}
-filtersg: &filtersg {include-all: true, filter: "(?i)新加坡"}
-filtertw: &filtertw {include-all: true, filter: "(?i)台湾"}
-filterjp: &filterjp {include-all: true, filter: "(?i)日本"}
-filterus: &filterus {include-all: true, filter: "(?i)美国"}
-filterother: &filterother {include-all: true, filter: "^(?!.*(香港|新加坡|台湾|日本|美国)).*$"}
+  filterhk: &filterhk {include-all: true, filter: "(?i)香港"}
+  filtersg: &filtersg {include-all: true, filter: "(?i)新加坡"}
+  filtertw: &filtertw {include-all: true, filter: "(?i)台湾"}
+  filterjp: &filterjp {include-all: true, filter: "(?i)日本"}
+  filterus: &filterus {include-all: true, filter: "(?i)美国"}
+  filterother: &filterother {include-all: true, filter: "^(?!.*(香港|新加坡|台湾|日本|美国)).*$"}
+
+  ip: &ip {type: http, interval: 86400, behavior: ipcidr, format: mrs}
+  domain: &domain {type: http, interval: 86400, behavior: domain, format: mrs}
+  class: &class {type: http, interval: 86400, behavior: classical, format: text}
 
 proxy-groups:
   - {name: 🚀 默认代理, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇸 美国, 🇺🇳 其它, 🌐 全部节点, 直连]}
@@ -287,7 +292,7 @@ rules:
   - RULE-SET,icloud_cn_domain,🍎 Apple 中国
   - RULE-SET,apple_domain,🍎 Apple
   - RULE-SET,icloud_domain,🍎 Apple
-  - RULE-SET,ai,🤖 AI
+  - RULE-SET,ai_domain,🤖 AI
   - RULE-SET,youtube_domain,📹 YouTube
   - RULE-SET,google_ip,🍀 Google,no-resolve
   - RULE-SET,google_domain,🍀 Google
@@ -320,10 +325,6 @@ rules:
   - MATCH,🐟 漏网之鱼
 
 
-rule-anchor:
-  ip: &ip {type: http, interval: 86400, behavior: ipcidr, format: mrs}
-  domain: &domain {type: http, interval: 86400, behavior: domain, format: mrs}
-  class: &class {type: http, interval: 86400, behavior: classical, format: text}
 rule-providers:
 
   # 私有
@@ -340,7 +341,7 @@ rule-providers:
 
 
   # AI 服务
-  ai: {  <<: *domain, url: "{{GHPROXY_URL}}https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/category-ai-chat-!cn.mrs" }
+  ai_domain: {  <<: *domain, url: "{{GHPROXY_URL}}https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/category-ai-chat-!cn.mrs" }
 
   # youtube
   youtube_domain: { <<: *domain, url: "{{GHPROXY_URL}}https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geosite/youtube.mrs"}
