--- a/my-clash.example.yaml
+++ b/my-clash.example.yaml
@@ -151,6 +151,9 @@ dns:
   fake-ip-range: "28.0.0.1/8"
   fake-ip-filter-mode: blacklist
   fake-ip-filter:
+    - '+.lan'
+    - '+.local'
+    - "+.q3boy.com"
     - "rule-set:private_domain,cn_domain"
     - "+.services.googleapis.cn"
     - "+.xn--ngstr-lra8j.com"
@@ -160,7 +163,6 @@ dns:
     - "+.ntp1.aliyun.com"
     - "+.ntp.ntsc.ac.cn"
     - "+.cn.ntp.org.cn"
-    - "+.q3boy.com"
   default-nameserver:
     - "223.5.5.5"
     - "119.29.29.29"
