--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 MY_SECRET_KEY=your-secret-key
 BYWAVE_SUBSCRIPTION_URL=https://your.subscription/url
 SSRDOG_SUBSCRIPTION_URL=https://your.subscription/url
-GHPROXY_URL=https://ghfast.top/
+GOHOME_SUBSCRIPTION_URL=https://your.subscription/url
+GH_PROXY_PREFIX=https://your.proxy/prefix
