--- a/my-clash.example.yaml
+++ b/my-clash.example.yaml
@@ -18,7 +18,7 @@ proxy-providers:
     override:
       udp: true
       down: "1000 Mbps"
-      up: "50 mbps"
+      up: "50 Mbps"
       skip-cert-verify: true
   SsrDog:
     url: "{{SSRDOG_SUBSCRIPTION_URL}}"
@@ -38,8 +38,29 @@ proxy-providers:
     override:
       udp: true
       down: "1000 Mbps"
-      up: "50 mbps"
+      up: "50 Mbps"
       skip-cert-verify: true
+  GoHome:
+    url: "{{GOHOME_SUBSCRIPTION_URL}}"
+    path: "./proxies/gohome.yaml"
+    type: http
+    interval: 86400
+    health-check:
+      enable: true
+      url: https://www.gstatic.com/generate_204
+      interval: 300
+    proxy: 直连
+    header:
+      User-Agent:
+        - "Clash"
+        - "mihomo"
+        - "Clash.meta"
+    override:
+      udp: true
+      down: "30 Mbps"
+      up: "1000 Mbps"
+      skip-cert-verify: true
+
 # 节点信息
 proxies:
   - {name: 直连, type: direct, udp: true}
@@ -76,17 +97,17 @@ profile:
 geo-auto-update: true
 geo-update-interval: 24
 geox-url:
-  geoip: "{{GHPROXY_URL}}https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geoip-lite.dat"
-  geosite: "{{GHPROXY_URL}}https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geosite.dat"
-  mmdb: "{{GHPROXY_URL}}https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/country-lite.mmdb"
-  asn: "{{GHPROXY_URL}}https://github.com/xishang0128/geoip/releases/download/latest/GeoLite2-ASN.mmdb"
+  geoip: "{{GH_PROXY_PREFIX}}release/geoip-lite.dat"
+  geosite: "{{GH_PROXY_PREFIX}}release/geosite.dat"
+  mmdb: "{{GH_PROXY_PREFIX}}release/country-lite.mmdb"
+  asn: "{{GH_PROXY_PREFIX}}release/GeoLite2-ASN.mmdb"
 
 # 控制面板
 external-controller: 0.0.0.0:9090
 secret: "{{MY_SECRET_KEY}}"
 external-ui: "/etc/mihomo/run/ui"
 external-ui-name: zashboard
-external-ui-url: "{{GHPROXY_URL}}https://github.com/Zephyruso/zashboard/archive/refs/heads/gh-pages.zip"
+external-ui-url: "{{GH_PROXY_PREFIX}}dashboard/gh-pages.zip"
 
 # 嗅探
 sniffer:
@@ -189,12 +210,8 @@ dns:
     '+.aliyun.com': '223.5.5.5'
     '+.alipay.com': '223.5.5.5'
     '+.alicdn.com': '223.5.5.5'
-    "rule-set:cn_domain":
-      - "223.5.5.5"
-      - "119.29.29.29"
-    "rule-set:gfw_domain,geolocation-!cn":
-      - "tls://1.1.1.1#🚀 默认代理"
-      - "tls://8.8.8.8#🚀 默认代理&h3=true"
+    "rule-set:cn_domain": "223.5.5.5"
+    "rule-set:gfw_domain,geolocation-!cn": "tls://1.1.1.1#🚀 默认代理"
   # namesever尽量用运营商提供的DNS
   nameserver:
     - 202.101.172.35
@@ -220,60 +237,5 @@ dns:
       - "+.twitter.com"
       - "+.youtube.com"
       - "+.github.com"
-
-# 出站策略
-# 注意锚点必须放在引用的上方，可以集中把锚点全部放yaml的顶部。
-anchors:
-  pr: &pr {type: select, proxies: [🚀 默认代理, 🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇸 美国, 🇺🇳 其它, 🌐 全部节点, 直连]}
-  prsg: &prsg {type: select, proxies: [🇸🇬 新加坡, 🚀 默认代理, 🇭🇰 香港, 🇹🇼 台湾, 🇯🇵 日本, 🇺🇸 美国, 🇺🇳 其它, 🌐 全部节点, 直连]}
-  prjp: &prjp {type: select, proxies: [🇯🇵 日本, 🚀 默认代理, 🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇺🇸 美国, 🇺🇳 其它, 🌐 全部节点, 直连]}
-  prdirect: &prdirect {type: select, proxies: [直连, 🚀 默认代理, 🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇸 美国, 🇺🇳 其它, 🌐 全部节点]}
-  prads: &prads {type: select, proxies: [REJECT, 直连, 🚀 默认代理, 🌐 全部节点]}
-
-  filterhk: &filterhk {include-all: true, filter: "(?i)香港"}
-  filtersg: &filtersg {include-all: true, filter: "(?i)新加坡"}
-  filtertw: &filtertw {include-all: true, filter: "(?i)台湾"}
-  filterjp: &filterjp {include-all: true, filter: "(?i)日本"}
-  filterus: &filterus {include-all: true, filter: "(?i)美国"}
-  filterother: &filterother {include-all: true, filter: "^(?!.*(香港|新加坡|台湾|日本|美国)).*$"}
-
-proxy-groups:
-  - {name: 🚀 默认代理, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇸 美国, 🇺🇳 其它, 🌐 全部节点, 直连]}
-  - {<<: *prads, name: 🛑 广告}
-  - {<<: *prdirect, name: 🎯 直连}
-  - {<<: *pr, name: 📹 YouTube}
-  - {<<: *pr, name: 🍀 Google}
-  - {<<: *prsg, name: 🤖 AI}
-  - {<<: *pr, name: 🍎 Apple}
-  - {<<: *prdirect, name: 🍎 Apple 中国}
-  - {<<: *pr, name: 🐬 OneDrive}
-  - {<<: *pr, name: 🪟 Microsoft}
-  - {<<: *prdirect, name: 🪟 Microsoft 中国}
-  - {<<: *prjp, name: 🎵 TikTok}
-  - {<<: *prsg, name: 📲 Telegram}
-  - {<<: *prsg, name: 🎥 NETFLIX}
-  - {<<: *pr, name: 👨🏿‍💻 GitHub}
-  - {<<: *pr, name: 🎮 游戏平台}
-  - {<<: *prdirect, name: 🎮 游戏下载}
-  - {<<: *prdirect, name: ✈️ Speedtest}
-  - {<<: *pr, name: 🐟 漏网之鱼}
-
-  - {name: 🇭🇰 香港, type: select, proxies: [🔁 🇭🇰 香港故转, 🌐 🇭🇰 香港自动, ✅ 🇭🇰 香港手动]}
-  - {name: 🇸🇬 新加坡, type: select, proxies: [🔁 🇸🇬 新加坡故转, 🌐 🇸🇬 新加坡自动, ✅ 🇸🇬 新加坡手动]}
-  - {<<: *filtertw, name: 🇹🇼 台湾, type: select}
-  - {<<: *filterjp, name: 🇯🇵 日本, type: select}
-  - {<<: *filterus, name: 🇺🇸 美国, type: select}
-  - {<<: *filterother, name: 🇺🇳 其它, type: select}
-
-  - {<<: *filterhk, name: ✅ 🇭🇰 香港手动, type: select}
-  - {<<: *filterhk, name: 🔁 🇭🇰 香港故转, type: fallback, tolerance: 20, interval: 300}
-  - {<<: *filterhk, name: 🌐 🇭🇰 香港自动, type: url-test, tolerance: 20, interval: 300}
-
-  - {<<: *filtersg, name: ✅ 🇸🇬 新加坡手动, type: select}
-  - {<<: *filtersg, name: 🔁 🇸🇬 新加坡故转, type: fallback, tolerance: 20, interval: 300}
-  - {<<: *filtersg, name: 🌐 🇸🇬 新加坡自动, type: url-test, tolerance: 20, interval: 300}
-
-  - {name: 🌐 全部节点, type: select, include-all: true}
-
 
 # mrs 转换: mihomo convert-ruleset [domain|ip] [yaml|text] source.yaml tartet.mrs
